fixed iten's spacing

--- a/themes/caci/src/css/main.less
+++ b/themes/caci/src/css/main.less
@@ -466,22 +466,25 @@ input[type="submit"] {
         .dossiers-header{
             color: #fff;
             background-color: #320303;
-            padding: 93px 31px;
+            padding: 90px 31px 90px 70px;
             margin: 0;
             text-transform: capitalize;  
         }
 
         li {
             display: block;
-            width: 100%;
-            height: 130px;
             float: left;
             box-sizing: border-box;
             padding: 10px 20px;
-            border-right: 1px solid rgba(0, 0, 0, 0.4);
             color: #111;
             position: relative;
             border-bottom: solid 1px #ddd;
+            margin: 0 30px 0 50px;
+            .excerpt{
+                max-height: 88px;
+                overflow: hidden;
+                padding-bottom: 30px;
+            }
             &:last-child {
                 border-right: 0;
             }
